Added a 'Leave Room' button. Implemented service-oriented architecture with mock data.

--- a/speech-habits-client/www/index.html
+++ b/speech-habits-client/www/index.html
@@ -42,6 +42,7 @@ under the License.
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 		-->
 		<script src="lib/angular/angular.js"></script>
+  		<script src="lib/angular/angular-resource.js"></script>
 		<script src="lib/angular/angular-route.js"></script>
 
 		<!-- These are our application-specific scripts -->
