--- a/speech-habits_thin-mobile/www/index.html
+++ b/speech-habits_thin-mobile/www/index.html
@@ -39,7 +39,7 @@
                 /**
                  * @type {string}
                  */
-                window.location.href = "http://speech-habits.herokuapp.com/";
+                window.location.href = "http://10.0.2.2:3000";
 
             }
 
